--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
         <activity
             android:name=".ui.activities.SettingsActivity"
             android:exported="true" />
+        
+        <activity
+            android:name=".ui.activities.HistoryActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
