--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,5 +1,5 @@
 name: ⭐ Feature request
-description: Suggest a feature to improve the Translate You
+description: Suggest a feature to improve Translate You
 labels: [enhancement]
 body:
 
