Lock orientation to portrait (see #194)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,12 @@
 
         <activity
             android:name=".ui.MainActivity"
+            android:configChanges="orientation"
             android:exported="true"
+            android:screenOrientation="userPortrait"
             android:theme="@style/Theme.TranslateYou"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustResize"
+            tools:ignore="LockedOrientationActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
